# SSP-MMC-FSRS

./: .gitignore  AGENTS.md  README.md  converge.py  hyperparameter_optimizer.py  model.pth  mypy.ini  nn.py  nn_trainer.py  notebook.ipynb  pyproject.toml  pyrefly.toml  script.py  simulator.py  unconverged_users.json
experiments/: __init__.py  converge.py  dr_threshold_analysis.py  generate_ssp_mmc_policies.py  hyperparameter_optimizer.py  lib.py  run_experiment.py  run_experiment_lib.py  simulate.py
notebooks/: convergence_analysis.ipynb  notebook.ipynb
src/ssp_mmc_fsrs/: __init__.py  config.py  core.py  io.py  policies.py  simulation.py  solver.py
